
December 25, 2025
> Change BG img into gif
> Added BG music and typewriter sound effect
> Added settings icon on the right of the header, when clicked, it will pop up sidebar to toggle on/off music, sounds and typewriter effect
> Add underline text on the selected show section
> Reorder the game data for clearer AI memory

December 27, 2025
> Change header color
> Fix search icon position and settings icon on top right corner on mobile view
> Added sound effect when the user send a message
> Updated YT description
> Added loop movement animation on background
> Remove the gap on the right side of the website
> Switch from tick on/off on settings into switch on/off

January 01, 2026
> Added slightly light blue on card on game list
> Added slightly dark brightness on background

January 02, 2026
> Added AI API status available (Info icon beside the "Jaymantrix AI" text)
> Jaymantrix AI knows the current date and time (Based on computer date and time, not based on live)
> Remove strict of 50 words limitation, but Jaymantrix AI response to 50 words when only short response, else it can response longer
> Added typewriter speed on settings, default interval time is 0.015s
> Added pop up notification modal with sound effect on the bottom right when API is switched

January 03, 2026
> Changed the AI model from "gemini-2.5-flash-lite-preview-09-2025" to "gemini-flash-lite-latest"
> Changed the notification modal exit from 10s to 5s
> Try to adjust AI system instruction for the AI first message
> Restructure the files
> Added category tabs for easier navigate games category
> Due to said AI response "AI temporarily unavailable due to quota. Please try again later." when the AI text detect the word "quota", "quota exceeded", and "rate limit". So I removed it.

January 05, 2026
> Changed category tabs design (Fixed on auto top when scroll down but fix is almost there!)
> Fixed horizontal scrollbar on category tabs not fully completed