@@ -125,12 +125,48 @@ nav button:hover {
   cursor: pointer;
   font-size: 0.95rem;
   white-space: nowrap;
-  transition: transform 0.18s ease, box-shadow 0.18s ease;
+  transition: transform 0.12s ease, box-shadow 0.18s ease, background 0.18s ease, color 0.12s ease;
+  display: inline-flex;
+  align-items: center;
+  min-width: 170px;
+  max-width: 220px;
+  position: relative;
+  overflow: hidden;
+  font-weight: 600;
+}
+
+.chat-trigger:focus {
+  outline: 2px solid rgba(0,255,204,0.12);
+  outline-offset: 2px;
 }
 
 .chat-trigger:hover {
-  box-shadow: 0 0 8px rgba(0, 255, 204, 0.12);
-  transform: translateY(-3px) scale(1.03);
+  box-shadow: 0 12px 48px rgba(0, 170, 255, 0.28), 0 0 20px rgba(110,255,217,0.06);
+  transform: translateY(-3px) scale(1.02);
+  background: linear-gradient(90deg, #00ffd0, #00aaff);
+  color: #001317;
+  border-color: rgba(255,255,255,0.06);
+}
+
+.marquee {
+  display: inline-block;
+  white-space: nowrap;
+  will-change: transform;
+  animation: marquee 6s linear infinite;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.2px;
+  overflow: visible;
+}
+
+.marquee span {
+  display: inline-block;
+  padding-right: 1rem;
+}
+
+@keyframes marquee {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(-33.333%); }
 }
 
 .nav-button.active {
@@ -163,15 +199,19 @@ nav button:hover {
   border: none;
   width: 100%;
   font-size: 1rem;
-  background-color: #1e1e1e;
+  background: linear-gradient(90deg, rgba(6,30,28,0.6), rgba(4,20,30,0.65));
   color: #fff;
   box-shadow: 0 0 5px #00ffcc55;
   outline: none;
   transition: box-shadow 0.15s, transform 0.08s;
 }
 
+.search-input::placeholder {
+  color: rgba(255,255,255,0.65);
+}
+
 .search-input:focus {
-  box-shadow: 0 0 8px rgba(0,255,204,0.18);
+  box-shadow: 0 0 10px rgba(0,255,204,0.22);
 }
 
 .search-icon {
@@ -550,6 +590,11 @@ footer {
     right: 12px;
     top: 12px;
     z-index: 2500;
+  }
+
+  .chat-trigger {
+    min-width: 140px;
+    max-width: 90%;
   }
 }
 
