@@ -1,11 +1,35 @@
 // Observer.js
+let animating = false
+
+function animateTop(el, from, to) {
+  if (from === to) return
+  animating = true
+  const start = performance.now()
+  const duration = 260
+
+  function step(now) {
+    const t = Math.min((now - start) / duration, 1)
+    const eased = 1 - Math.pow(1 - t, 3)
+    const value = from + (to - from) * eased
+    el.style.top = value + 'px'
+    if (t < 1) {
+      requestAnimationFrame(step)
+    } else {
+      animating = false
+    }
+  }
+
+  requestAnimationFrame(step)
+}
+
 function computeTopForTabs() {
   const container = document.getElementById('category-tabs')
   if (!container) return
   const header = document.querySelector('header')
   const headerBottom = header ? header.getBoundingClientRect().bottom : 0
-  const topVal = headerBottom > 0 ? headerBottom + 8 : 0
-  container.style.top = `${topVal}px`
+  const targetTop = headerBottom > 0 ? headerBottom + 8 : 0
+  const currentTop = parseFloat(getComputedStyle(container).top) || 0
+  if (!animating) animateTop(container, currentTop, targetTop)
 }
 
 function ensureUpdateTop() {
@@ -19,40 +43,40 @@ function ensureUpdateTop() {
 function attachObservers() {
   window.addEventListener('load', ensureUpdateTop)
   if (document.fonts && document.fonts.ready) document.fonts.ready.then(ensureUpdateTop)
-  requestAnimationFrame(() => { ensureUpdateTop(); setTimeout(ensureUpdateTop, 80); setTimeout(ensureUpdateTop, 300) })
+  requestAnimationFrame(() => {
+    ensureUpdateTop()
+    setTimeout(ensureUpdateTop, 80)
+    setTimeout(ensureUpdateTop, 300)
+  })
 
   const headerEl = document.querySelector('header')
-  const tabsEl = document.getElementById('category-tabs')
+
   if (window.ResizeObserver) {
     if (headerEl) {
-      const ro = new ResizeObserver(() => { ensureUpdateTop() })
-      ro.observe(headerEl)
+      new ResizeObserver(ensureUpdateTop).observe(headerEl)
     }
-    if (tabsEl) {
-      const ro2 = new ResizeObserver(() => { ensureUpdateTop() })
-      ro2.observe(tabsEl)
-    } else {
-      const roWait = new ResizeObserver(() => { ensureUpdateTop() })
-      const waiter = setInterval(() => {
-        const t = document.getElementById('category-tabs')
-        if (t) {
-          roWait.observe(t)
-          clearInterval(waiter)
-        }
-      }, 120)
-    }
+
+    const waitTabs = setInterval(() => {
+      const t = document.getElementById('category-tabs')
+      if (t) {
+        new ResizeObserver(ensureUpdateTop).observe(t)
+        clearInterval(waitTabs)
+      }
+    }, 120)
   }
 
   if (window.MutationObserver) {
-    const bodyObserver = new MutationObserver(() => { ensureUpdateTop() })
-    bodyObserver.observe(document.body, { childList: true, subtree: true, attributes: false })
+    new MutationObserver(ensureUpdateTop).observe(document.body, {
+      childList: true,
+      subtree: true
+    })
   }
 
-  let retryCount = 0
+  let retry = 0
   const retryInterval = setInterval(() => {
     ensureUpdateTop()
-    retryCount++
-    if (retryCount > 8) clearInterval(retryInterval)
+    retry++
+    if (retry > 8) clearInterval(retryInterval)
   }, 200)
 }
 
