@@ -61,3 +61,7 @@ January 03, 2026
 January 05, 2026
 > Changed category tabs design (Fixed on auto top when scroll down but fix is almost there!)
 > Fixed horizontal scrollbar on category tabs not fully completed
+
+January 06, 2026
+> Added smooth movement of category tabs into top when scroll down
+> Added marquee effect on the button "Chat with Jaymantrix AI"
